<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="213dp"
        android:layout_height="133dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/info_share_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_principal"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/editTituloNoticia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_titulo"
        android:padding="15dp"
        android:textColor="#FF000000"
        android:background="@android:color/white"
        android:backgroundTint="#e6ccb2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/editNoticia"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/hint_noticia"
        android:padding="15dp"
        android:textColor="#FF000000"
        android:background="@android:color/white"
        android:backgroundTint="#e6ccb2"
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textMultiLine"
        />

    <EditText
        android:id="@+id/editDataNoticia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_data"
        android:padding="15dp"
        android:textColor="#FF000000"
        android:background="@android:color/white"
        android:backgroundTint="#e6ccb2"
        android:maxLength="10"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <EditText
        android:id="@+id/editAutorNoticia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_autor"
        android:padding="15dp"
        android:textColor="#FF000000"
        android:background="@android:color/white"
        android:backgroundTint="#e6ccb2"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <Button
        android:id="@+id/PublicarNoticia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="#B07D62"
        android:padding="15dp"
        android:text="@string/txt_button"
        android:textColor="#FF000000"
        android:textSize="18sp"


        />
</LinearLayout>
    </ScrollView>